fixed error by changing | with or because syntax, edited README spacing, added user profile visability to homepage

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -47,4 +47,17 @@ table{
   margin-left: auto;
   margin-right: auto;
 }
+div.text{
+  font-size:120%;
+  position:absolute; 
+  left:600px; 
+  top:220px;
+  white-space: nowrap;
+  font-color: black;
+  border-radius: 25px;
+  border: 2px solid black;
+  padding: 15px; 
+  width: 400px;
+  height: 140px;
+}
 
